added env load endpoint
